# test-task-rest-api

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: boards.py  notes.py
app/db/: __init__.py  create_db.py  db_url_config.py  models.py  session.py
app/migrations/: env.py
app/repositories/: __init__.py  boards_repo.py  notes_repo.py
app/schemas/: __init__.py  boards.py  notes.py
app/services/: boards.py  notes.py
app/utils/: repository.py  unitofwork.py
